# ace-optimizer

./: .gitignore  NOTICE  README.md  pyproject.toml
demo/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
demo/public/: trace.json
demo/src/: App.tsx  data.ts  styles.css
docs/rfc/: 0001-dspy-ace-optimizer.md
experiments/: fetch_data.py  formula_repro.py  reproduce.py
experiments/results/: finer_bedrock_deepseek_v3_v1_0.json  finer_openai_gpt_4o_mini.json  finer_openai_gpt_4o_mini_trace_full.json
src/ace/: __init__.py  checkpoint.py  curate.py  engine.py  facade.py  faithful.py  gate.py  merge.py  online.py  playbook.py  reflect.py  result.py  signals.py  store.py  trace_io.py
src/ace/core/: adapter.py
src/ace/integrations/: __init__.py  anthropic.py
src/ace/integrations/dspy/: __init__.py  ace.py  adapter.py  signatures.py
src/dspy_ace/: __init__.py  ace.py  adapter.py  generator.py  signatures.py
tests/: test_dspy_ace.py  test_engine.py  test_integrations.py  test_library.py  test_merge.py  test_store.py
